chore: upgrade to Java 21 (#118)
Closes: MRSPECS-81