@@ -1,7 +1,7 @@
 package org.folio.rspec.validation.validator.marc.impl;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.params.provider.Arguments.arguments;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
@@ -42,7 +42,7 @@ public class UndefinedSubfieldRuleValidatorTest {
     var errors = validator.validate(getSubfields(subfield1, subfield2), getFieldDefinition());
 
     assertEquals(1, errors.size());
-    ValidationError error = errors.get(0);
+    ValidationError error = errors.getFirst();
     assertEquals(validator.definitionType(), error.getDefinitionType());
     assertEquals(validator.severity(), error.getSeverity());
     assertEquals(validator.supportedRule().getCode(), error.getRuleCode());
@@ -56,7 +56,7 @@ public class UndefinedSubfieldRuleValidatorTest {
     assertTrue(errors.isEmpty());
   }
 
-  public static Stream<Arguments> undefinedSubfieldTestSource() {
+  private static Stream<Arguments> undefinedSubfieldTestSource() {
     return Stream.of(
       arguments('f', 'a'),
       arguments('c', 'b'),
